--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   .bg-1 { 
       /*background-color: #1a53ff; 
       color: #ffffff;*/
-      background-image: url("/bg.jpg");
+      background-image: url("bg.jpg");
   }
   .bg-2 { 
       background-color: #002266; 
@@ -45,7 +45,7 @@
  }
 
 .bg-4 {
-  background-image: url("/bg3.jpg");
+  background-image: url("bg3.jpg");
 }
 
 .bg-5 {
